shared-business-logics/services/centralized-dashboard/Backend/Java/platform-services/centralized-real-time-platform/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: centralized-real-time-platform
  namespace: centralized-dashboard
  labels:
    app: centralized-real-time-platform
    team: team-f-centralized-dashboard
spec:
  type: ClusterIP
  selector:
    app: centralized-real-time-platform
  ports:
  - name: http
    port: 8915
    targetPort: 8915
    protocol: TCP
  - name: websocket
    port: 8915
    targetPort: 8915
    protocol: TCP
  sessionAffinity: None
